# occam-sdk

./: .gitignore  DEPRECATED_README.md  README.md  pyproject.toml
generator/: README.md  generate_sdk.py
generator/mounted/: postprocess.sh  spec.yaml
generator/mounted/templates/: api.mustache  api_client.mustache  rest.mustache
src/python/occam_sdk/: api_client.py  util.py
src/python/occamai/: api_client.py  util.py
src/python/scripts/: example_run_agent.py
src/scripts/: example_run_agent.py
